# water_level_anomaly_detection

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  Taskfile.yml  build-image.sh  devbox.json  docker-compose.yaml  exp.ipynb  filebeat-setup.sh  filebeat.docker.yml  inventory.yml  main.tf  ops.ipynb  playbook.yaml  pyproject.toml  run-docker-app.sh  setup-env.sh  setup_env.sh  task.bash  terraform.tfstate  terraform.tfstate.backup  variables.tf
.github/workflows/: build-and-deploy.yaml  build-docker.yaml
deploy/k8s/: deployment.yml  tls-certificate-issuer.yml
elastic-start-local/: .env  docker-compose.yml  filebeat.yml  start.sh  stop.sh  uninstall.sh
helper/: get_k8s_config.py
terraform/ionos-cloud/: .terraform.lock.hcl  variables.tf
terraform/providers/docker/: terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/providers/ionos-cloud/: main.tf  terraform.tfstate
water_level_anomaly_detection/: app.py  etl.py  plot.py  stations.py
