[tool.poetry]
description = "Water level anomaly detection"
authors = ["Sajad Safarveisi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
torch = {version = "2.3.0", source = "pytorch_cpu"}
scikit-learn = "^1.6.0"
black = {extras = ["jupyter"], version = "^24.10.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
