[tool.poetry]
name = "water-level-anomaly-detection"
version = "0.1.0"
description = "Water level anomaly detection"
authors = ["Sajad Safarveisi"]
readme = "README.md"
packages = [{include = "water_level_anomaly_detection"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.6.0"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
black = {extras = ["jupyter"], version = "^24.10.0"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
